@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("application")
     kotlin("plugin.serialization") version "latest.release"
     kotlin("jvm")
 }
@@ -12,14 +13,18 @@ repositories {
 }
 
 dependencies {
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+    // JDA stuffs
     implementation("net.dv8tion:JDA:5.6.1")
+    implementation("ch.qos.logback:logback-classic:1.5.6")
+
+    // other stuffs
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
     implementation("org.reflections:reflections:0.10.2")
 
-    //database
-    implementation("io.ktor:ktor-client-cio:latest.release")
+    // database
     implementation("com.google.firebase:firebase-admin:9.2.0")
 
+    // added by default from IntelliJ IDEA
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -29,6 +34,15 @@ dependencies {
 tasks.test {
     useJUnitPlatform()
 }
+
 kotlin {
     jvmToolchain(24)
+}
+
+application {
+    mainClass.set("com.marc.discordbot.carol.CarolLauncher")
+}
+
+tasks.named<JavaExec>("run") {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
